@@ -1,5 +1,8 @@
 = 1.0.1 - ???
 * Added a working implementation of File.owned?
+* Added a working implementation of File.chown.
+* Added the File.owner method.
+* Made the FFI functions private.
 
 = 1.0.0 - 19-Dec-2012
 * Initial release as an independent library.
